# ai_model_client

./: README.md  package.xml  setup.cfg  setup.py
ai_model_client/: image_service_sender.py  mock_server.py
